[package]
name = "indic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arc-swap = "1.9.2"
base64 = "0.22"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
flate2 = "1.1.9"
futures = "0.3"
ipnet = "2.12.0"
maxminddb = "0.29"
psl = "2"
reqwest = { version = "0.13.4", features = ["gzip", "json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "fs", "time", "signal", "sync"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rusqlite = { version = "0.40", features = ["bundled"] }
